// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu DropMenu mutliple selectedKeys 2 1`] = `
.c1 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c2 > i {
  vertical-align: middle;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c3 i {
  vertical-align: middle;
}

.c4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

.c0 {
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c0::-webkit-scrollbar {
  width: 8px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background: #c2c2c2;
}

.c0::-webkit-scrollbar-thumb:hover {
  background: #bdbdbd;
}

.c0::-webkit-scrollbar-track {
  background: transparent;
}

.c0:hover > div:nth-child(2) {
  opacity: 1;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "boxShadow": "0px 0px 6px 0px #d0d3da",
    }
  }
>
  <ul
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={Object {}}
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="a"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          a
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="b"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          b
        </span>
      </div>
    </li>
    <li
      checked={true}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#363B40",
        }
      }
      title="c"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          c
        </span>
      </div>
    </li>
    <li
      checked={true}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#363B40",
        }
      }
      title="d"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          d
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Menu DropMenu single selectedKeys 2 1`] = `
.c1 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c2 > i {
  vertical-align: middle;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c3 i {
  vertical-align: middle;
}

.c4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

.c0 {
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c0::-webkit-scrollbar {
  width: 8px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background: #c2c2c2;
}

.c0::-webkit-scrollbar-thumb:hover {
  background: #bdbdbd;
}

.c0::-webkit-scrollbar-track {
  background: transparent;
}

.c0:hover > div:nth-child(2) {
  opacity: 1;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "boxShadow": "0px 0px 6px 0px #d0d3da",
    }
  }
>
  <ul
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={Object {}}
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="a"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          a
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="b"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          b
        </span>
      </div>
    </li>
    <li
      checked={true}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#363B40",
        }
      }
      title="c"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          c
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="d"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          d
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Menu DropMenu width: 500px height: 300px 1`] = `
.c1 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c2 > i {
  vertical-align: middle;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c3 i {
  vertical-align: middle;
}

.c4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

.c0 {
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c0::-webkit-scrollbar {
  width: 8px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background: #c2c2c2;
}

.c0::-webkit-scrollbar-thumb:hover {
  background: #bdbdbd;
}

.c0::-webkit-scrollbar-track {
  background: transparent;
}

.c0:hover > div:nth-child(2) {
  opacity: 1;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "boxShadow": "0px 0px 6px 0px #d0d3da",
    }
  }
>
  <ul
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={Object {}}
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="a"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          a
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="b"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          b
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="c"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          c
        </span>
      </div>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#363B40",
        }
      }
      title="d"
    >
      <div
        className="c3"
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c4"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          d
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Menu children: items 1`] = `
.c2 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c3 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c3 > i {
  vertical-align: middle;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c4 i {
  vertical-align: middle;
}

.c5 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

.c0 {
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  width: 25rem;
  background-color: #fff;
  height: 25rem;
}

.c0::-webkit-scrollbar {
  width: 8px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background: #c2c2c2;
}

.c0::-webkit-scrollbar-thumb:hover {
  background: #bdbdbd;
}

.c0::-webkit-scrollbar-track {
  background: transparent;
}

.c0:hover > div:nth-child(2) {
  opacity: 1;
}

.c1 {
  width: 25rem;
  position: absolute;
  display: inline-block;
  height: 25rem;
  height: 25rem;
}

.c6 {
  width: 1.2rem;
  position: absolute;
  display: inline-block;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
  right: 0;
}

.c8 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c7 {
  width: 1.2rem;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.8rem;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.c9:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "boxShadow": "0px 0px 6px 0px #d0d3da",
      "width": "20rem",
    }
  }
>
  <div
    className="c1"
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <ul
      className="c2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "width": "20rem",
        }
      }
    >
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            0
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            1
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            2
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            3
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            4
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            5
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            6
          </span>
        </div>
      </li>
      <li
        checked={false}
        className="c3"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#363B40",
          }
        }
        title=""
      >
        <div
          className="c4"
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c5"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            7
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="c6"
    style={
      Object {
        "height": "25rem",
      }
    }
  >
    <div
      className="c7  c8"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "25rem",
        }
      }
    >
      <div
        className="c9"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "18.1rem",
            "top": "0rem",
          }
        }
      />
    </div>
  </div>
</div>
`;
